# Auswertung

./: README.md  pyproject.toml  resources.txt
.github/workflows/: compile_windows.yml
data/: club.py  competition.py  match.py  team.py
machines/: __init__.py  csv.py  machine.py  qr.py  qsd.py  rika.py
ui/frames/: competition_result_frame.py  output_frame.py
ui/windows/: visualisation_window.py
