[project]
name = "auswertung"
version = "1.2.0"
description = ""
authors = [
    {name = "Jan_Zgadzaj",email = "jan.zgadzaj@sportschuetzen-haaren.de"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "dataclasses-json (>=0.6.7,<0.7.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "numpy (==2.2.6)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "qrcode (>=8.2,<9.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pyinstaller (>=6.16.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
